--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="index.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
 <button id="star" onclick="ChangeDisabled(1)">開始</button>
