--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="games02.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="puzzle_area">
@@ -20,6 +20,6 @@
                 <div class="fill" draggable="true"></div>
             </div>
         </div>
-        <script src="games02.js"></script>
+        <script src="javascript.js"></script>
     </body>
 </html>
