--- a/g2/test/index.html
+++ b/g2/test/index.html
@@ -1,108 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <title>拼圖遊戲</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <style>
-        #puzzle {
-            display: flex;
-            flex-wrap: wrap;
-            width: 500px;
-            height: 500px;
-            margin: 0 auto;
-            background-image: url('https://i.imgur.com/9QJfZzU.jpg');
-            background-size: cover;
-            background-position: center;
-        }
+	<title>拼圖遊戲</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<style>
+		#puzzle {
+			display: flex;
+			flex-wrap: wrap;
+			width: 500px;
+			height: 500px;
+			margin: 0 auto;
+			background-image: url('https://i.imgur.com/9QJfZzU.jpg');
+			background-size: cover;
+			background-position: center;
+		}
 
-        .piece {
-            width: calc(100% / 3);
-            height: calc(100% / 3);
-            background-color: white;
-            background-size: cover;
-            background-position: center;
-            border: 1px solid black;
-            cursor: pointer;
-        }
-    </style>
+		.piece {
+			width: 100px;
+			height: 100px;
+			background-color: white;
+			background-size: cover;
+			background-position: center;
+			border: 1px solid black;
+			cursor: pointer;
+		}
+	</style>
 </head>
-
 <body>
-    <div class="container">
-        <h2>拼圖遊戲</h2>
-        <p>使用滑塊調整拼圖大小：</p>
-        <input type="range" min="2" max="6" value="3" class="slider" id="myRange">
-        <br><br>
-        <div id="puzzle"></div>
-    </div>
+	<div class="container">
+		<h2>拼圖遊戲</h2>
+		<p>使用滑塊調整拼圖大小：</p>
+		<input type="range" min="2" max="6" value="3" class="slider" id="myRange">
+		<br><br>
+		<div id="puzzle"></div>
+	</div>
 
-    <script>
-        var pieces = [];
-        var size = 3;
+	<script>
+		var pieces = [];
+		var size = 3;
 
-        $(document).ready(function () {
-            $("#myRange").on("input", function () {
-                size = parseInt($(this).val());
-                createPuzzle(size);
-            });
+		$(document).ready(function() {
+			$("#myRange").on("input", function() {
+				size = parseInt($(this).val());
+				createPuzzle(size);
+			});
 
-            createPuzzle(size);
-        });
+			createPuzzle(size);
+		});
 
-        function createPuzzle(size) {
-            pieces = [];
-            $("#puzzle").empty();
+		function createPuzzle(size) {
+			pieces = [];
+			$("#puzzle").empty();
 
-            var width = 100 / size;
-            var height = 100 / size;
+			var width = 500 / size;
+			var height = 500 / size;
 
-            for (var i = 0; i < size * size; i++) {
-                var piece = $("<div></div>");
-                piece.addClass("piece");
-                piece.css("background-image", "url('https://i.imgur.com/9QJfZzU.jpg')");
-                piece.css("background-position", -((i % size) * width) + "vw " + -((Math.floor(i / size)) * height) + "vh");
-                pieces.push(piece);
-            }
+			for (var i = 0; i < size * size; i++) {
+				var piece = $("<div></div>");
+				piece.addClass("piece");
+				piece.css("width", width + "px");
+				piece.css("height", height + "px");
+				piece.css("background-image", "url('https://i.imgur.com/9QJfZzU.jpg')");
+				piece.css("background-position", -((i % size) * width) + "px " + -((Math.floor(i / size)) * height) + "px");
+				pieces.push(piece);
+			}
 
-            shuffle(pieces);
+			shuffle(pieces);
 
-            for (var i = 0; i < pieces.length; i++) {
-                $("#puzzle").append(pieces[i]);
-            }
+			for (var i = 0; i < pieces.length; i++) {
+				$("#puzzle").append(pieces[i]);
+			}
 
-            $(".piece").draggable({
-                revert: "invalid",
-                zIndex: 1
-            });
+			$(".piece").draggable({
+				revert: "invalid"
+			});
 
-            $("#puzzle").droppable({
-                drop: function (event, ui) {
-                    var piece1 = $(ui.draggable);
-                    var piece2 = $(this).children().eq(piece1.index());
-                    var index1 = piece1.index();
-                    var index2 = piece2.index();
-                    piece1.insertAfter(piece2);
-                    pieces[index1] = piece2;
-                    pieces[index2] = piece1;
-                }
-            });
-        }
+			$("#puzzle").droppable({
+				drop: function(event, ui) {
+					var piece1 = $(ui.draggable);
+					var piece2 = $(this).children().eq(piece1.index());
+					var index1 = piece1.index();
+					var index2 = piece2.index();
+					piece1.insertAfter(piece2);
+					pieces[index1] = piece2;
+					pieces[index2] = piece1;
+				}
+			});
+		}
 
-        function shuffle(array) {
-            for (var i = array.length - 1; i > 0; i--) {
-                var j = Math.floor(Math.random() * (i + 1));
-                var temp = array[i];
-                array[i] = array[j];
-                array[j] = temp;
-            }
-        }
-    </script>
+		function shuffle(array) {
+			for (var i = array.length - 1; i > 0; i--) {
+				var j = Math.floor(Math.random() * (i + 1));
+				var temp = array[i];
+				array[i] = array[j];
+				array[j] = temp;
+			}
+		}
+	</script>
 </body>
-
 </html>
