--- a/g2/test/nw/index.html
+++ b/g2/test/nw/index.html
@@ -23,7 +23,7 @@
       let currentDropPiece;
       let mouse;
       img.addEventListener("load", onImage, false);
-      img.src = "https://asyncbanana.github.io/html5-canvas-puzzle/mke.jpg";
+      img.src = "https://source.unsplash.com/random";
 
       function initPuzzle() {
         pieces = [];
