--- a/g2/test/nw/index.html
+++ b/g2/test/nw/index.html
@@ -23,7 +23,7 @@
       let currentDropPiece;
       let mouse;
       img.addEventListener("load", onImage, false);
-      img.src = "https://source.unsplash.com/random";
+      img.src = "https://source.unsplash.com/random/800x532";
 
       function initPuzzle() {
         pieces = [];
