--- a/g2/test/chat/index.html
+++ b/g2/test/chat/index.html
@@ -7,15 +7,15 @@
   <body translate="no">
     <div class="container mt-4">
       <div class="row">
-        <canvas id="canvas" width="800" height="532" style="border: 1px solid black;"></canvas>
+        <canvas id="canvas" width="700" height="500" style="border: 1px solid black;"></canvas>
       </div>
-      <form>
+      <div class="mt-3">
         <div class="form-group mt-3">
           <label for="difficulty">難度</label>
           <input type="range" class="form-control-range" min="2" max="5" value="4" id="difficulty">
         </div>
         <button class="btn btn-primary btn-block" id="startBtn">開始遊戲</button>
-      </form>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -38,7 +38,7 @@
         let mouse;
 
         img.addEventListener("load", onImage, false);
-        img.src = "https://source.unsplash.com/random/800x532";
+        img.src = "https://source.unsplash.com/random/700x500";
 
         function initPuzzle() {
           pieces = [];
