--- a/g2/test/chat/index.html
+++ b/g2/test/chat/index.html
@@ -7,7 +7,7 @@
   <body translate="no">
     <div class="container mt-4">
       <div class="row">
-        <canvas id="canvas" width="700" height="500" style="border: 1px solid black;"></canvas>
+        <canvas id="canvas" style="border: 1px solid black;"></canvas>
       </div>
       <div class="mt-3">
         <div class="form-group mt-3">
