--- a/g2/test/chat/index.html
+++ b/g2/test/chat/index.html
@@ -25,7 +25,8 @@
     <canvas id="canvas" width="800" height="532" style="border: 1px solid black;"></canvas>
     <br>
     <label for="difficulty">Difficulty</label>
-    <input type="range" min="2" max="16" value="4" id="difficulty">
+    <input type="range" min="2" max="5" value="3" id="difficulty">
+    <button class="btn btn-primary btn-block" id="startBtn">開始遊戲</button>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
