--- a/g2/test/112/g1/g1start.html
+++ b/g2/test/112/g1/g1start.html
@@ -102,7 +102,7 @@
           `);
 
           $('.confirm-btn').click(function () {
-            window.location.href = 'g1setting.html';
+            window.location.href = 'index.html';
           });
 
           console.log(userResponses);
